# online-quiz

./: README.md  quizz.code-workspace
answer-service/: pyproject.toml
leaderboard-service/: .pylintrc  Makefile  pyproject.toml
leaderboard-service/app/: .env.template  main.py
leaderboard-service/app/dto/: dto_leader_board.py
leaderboard-service/app/models/: leader_board.py
leaderboard-service/app/repo/: db.py
leaderboard-service/app/routes/: api_leaderboard.py  depends.py  leader_board.py
leaderboard-service/app/svc/: svc_leaderboard.py
leaderboard-service/leaderboard_service/: main.py
leaderboard-service/tests/: load_test.js  producer.py  ws_leaderboard.js
quiz-service/: pyproject.toml
