[tool.poetry]
name = "leaderboard-service"
version = "0.1.0"
description = ""
authors = ["minhnq0702 <minhnq.0702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
motor = "^3.6.0"
python-dotenv = "^1.0.1"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
